# docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /api/v1
 definitions:
+  handler.ChangePasswordRequest:
+    properties:
+      newPassword:
+        minLength: 6
+        type: string
+      oldPassword:
+        minLength: 6
+        type: string
+    required:
+    - newPassword
+    - oldPassword
+    type: object
   handler.LoginRequest:
     properties:
       password:
@@ -95,28 +107,22 @@ definitions:
   handler.UserDetailResponse:
     properties:
       avatar:
-        description: 头像
         type: string
       bio:
-        description: 简介
         type: string
-      createdAt:
-        description: 创建时间
+      birthday:
         type: string
       email:
-        description: 邮箱
         type: string
       gender:
-        description: 性别
         type: string
       id:
-        description: 用户ID
         type: integer
+      lastLogin:
+        type: string
       nickname:
-        description: 昵称
         type: string
       username:
-        description: 用户名
         type: string
     type: object
   handler.UserListResponse:
@@ -270,6 +276,36 @@ paths:
       security:
       - Bearer: []
       summary: 更新用户信息
+  /user/password:
+    put:
+      consumes:
+      - application/json
+      description: 用户修改密码
+      parameters:
+      - description: 修改密码请求
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.ChangePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 密码修改成功
+          schema:
+            $ref: '#/definitions/handler.Response'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/handler.Response'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/handler.Response'
+      security:
+      - Bearer: []
+      summary: 修改密码
   /users:
     get:
       consumes:
@@ -309,7 +345,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: 获取指定用户的详细信息
+      description: 获取用户详细信息（仅允许获取自己的信息）
       parameters:
       - description: 用户ID
         in: path
@@ -332,8 +368,8 @@ paths:
           description: 未授权
           schema:
             $ref: '#/definitions/handler.Response'
-        "404":
-          description: 用户不存在
+        "403":
+          description: 禁止访问
           schema:
             $ref: '#/definitions/handler.Response'
       security:
